<resources>
    <string name="app_name">Periodic Table Helper</string>
    <string name="about">About</string>
    <string name="sort">Sort</string>
    <string name="sortNameAscending">By Name, A - Z)</string>
    <string name="sortNameDescending">By Name, Z - A)</string>
    <string name="alphabetical_by_symbol">By Symbol A - Z)</string>
    <string name="atomic_number_ascending">By Atomic Number, Ascending)</string>
    <string name="numerically_by_atomic_number_descending">By Atomic Number, Descending)</string>
    <string name="calculator">Calculator</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="searchFail1">Sorry, no matching results found.</string>
    <string name="search">Search</string>
    <string name="calc_description">Welcome to the atomic mass calculator. Enter elements by their symbol (eg. \'H\' for Hydrogen). Enter all calculations as you would in a standard calculator.\n</string>
    <string name="calculate">Calculate</string>
    <string name="_2_h_o">2 * H + O</string>
    <string name="x">X</string>
    <string name="explainCalc1">Welcome to the atomic mass calculator. Enter elements by name or symbol, followed by the amount of that element. Separate elements with a space. For example H2O would be entered as \'H2 O\'</string>
    <string name="h2_o">H2 O</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="input">Input:</string>
    <string name="molecular_mass_calculator">Molecular Mass Calculator</string>
    <string name="result">Result:</string>
    <string name="calculator_btn">calculator_btn</string>
    <string name="ca_oh_2">Ca(OH)2</string>
    <string name="enter_a_molecular_formula">Enter a molecular formula.</string>
    <string name="calculator_input_is_case_sensitive_n_n_only_use_chemical_symbols">Calculator input is case sensitive.\n \n Only use chemical symbols.</string>
    <string name="ex_ca_oh_2">Ex: Ca(OH)2</string>
</resources>
