<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/icon_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/calc"
        android:icon="@drawable/ic_calc"
        android:orderInCategory="100"
        android:title="@string/calculator_btn"
        android:onClick="openCalc"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuAbout"
        android:title="@string/about"/>
    <item
        android:id="@+id/calculatorButton"
        android:title="@string/calculator"
        android:onClick="openCalc"/>

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        >

        <menu>
            <item
                android:id="@+id/alphabeticalNameSortAscending"
                android:title="@string/sortNameAscending"/>

            <item
                android:id="@+id/alphabeticalNameSortDescending"
                android:title="@string/sortNameDescending"/>

            <item
                android:id="@+id/alphabeticalSymbolSortAscending"
                android:title="@string/alphabetical_by_symbol" />

            <item
                android:id="@+id/atomicNumberSortAscending"
                android:title="@string/atomic_number_ascending"/>

            <item
                android:id="@+id/atomicNumberSortDescending"
                android:title="@string/numerically_by_atomic_number_descending"/>

        </menu>

    </item>

</menu>